@@ -243,6 +243,7 @@ Q_SIGNALS:
     void repaintRequested(const QRect& dirtyRect);
     void scrollRequested(int dx, int dy, const QRect& scrollViewRect);
     void windowCloseRequested();
+    void printRequested(QWebFrame *frame);
     void linkClicked(const QUrl &url);
 
     void toolBarVisibilityChangeRequested(bool visible);
